kyverno/C0003-container-readiness-probe/policy-C0003.yaml
# Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: portefaix-C0003
  annotations:
    policies.kyverno.io/title: Container must set readiness probe
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Container
    policies.kyverno.io/description: >-
      Readiness probe need to be configured to correctly manage a pods
      lifecycle during deployments, restarts, and upgrades. For each pod, a
      `readinessProbe` is used by services and deployments to determine if
      the pod is ready to receive network traffic.
spec:
  validationFailureAction: audit
  rules:
  - name: validate-readiness-probe
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Readiness probe is required."
      pattern:
        spec:
          containers:
          - readinessProbe:
              periodSeconds: "?*"
